Opened 13 years ago
Closed 12 years ago
#8731 closed bug (fixed)
Missing declaration of sa_family_t in sys/socket.h
Reported by: | Anarchos | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/libroot.so | Version: | R1/Development |
Keywords: | socket sockaddr_t | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Attachments (1)
Change History (7)
comment:1 by , 13 years ago
Component: | Network & Internet → System/libroot.so |
---|---|
Owner: | changed from | to
comment:2 by , 13 years ago
Version: | R1/alpha3 → R1/Development |
---|
by , 13 years ago
Attachment: | socket.patch added |
---|
comment:3 by , 13 years ago
patch: | 0 → 1 |
---|
comment:4 by , 13 years ago
Surely many other files are concerned, but i don't know them and create this ticket as a start to gather all the modification needed, according to phoudoin.
comment:5 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:6 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Applied in hrev45100, thanks!
Note:
See TracTickets
for help on using tickets.
socket patch